# nzpy_extended

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: build_release.yaml  publish.yaml  publish.yml  test.yaml
docs/: async_api.md  metadata_api.md  pep249_compliance.md  sync_api.md
docs/docs/: load_data.md  pool.md  timeout_and_cancel.md
examples/: 02_transactions.py  04_copy.py  05_metadata.py  08_load_data.py  17_sync_pool.py  19_memory_leak_test.py  20_async_vs_sync_ram.py
examples/18_ram_test/: experiment.py  requirements.txt  server.py
examples/examples/: 01_basic_query.py  03_connection_pool.py  06_async_iteration.py  07_error_handling.py  09_load_data_benchmark.py  11_import_large_csv.py  12_import_from_excel.py  13_sync_basic.py  14_sync_transactions.py  15_sync_timeout.py  16_sync_callproc.py
examples/examples/10_query_app/: requirements.txt  server.py
examples/examples/10_query_app/static/: index.html
nzpy_extended/: __init__.py  _cstate.py  _dbos.py  _extab.py  _metadata.py  _metadata_api.py  _protocol.py  _protocols.py  _runner.py  _serializers.py  _version.py  buffer_pool.py  buffered_stream.py  c_ext.c  core.py  csv_import.py  cursor.py  exceptions.py  fastapi.py  handshake.py  load_data.py  pool.py  protocol.py  sync.py  types.py  utils.py
nzpy_extended/nzpy_extended/: _constants.py  _protocol.py  _version.py  c_ext.c  core.py  exceptions.py  pool.py  protocol.py  types.py  utils.py
tests/: _helpers.py  _memory_helpers.py  conftest.py  odbc_helper.py  odbc_queries_node.py  setup_all_datatype  setup_all_latin  setup_all_latin_utf  setup_all_utf  test_async_ops.py  test_basic.py  test_buffer_pool.py  test_buffered_stream.py  test_c_python_parity_integration.py  test_c_python_parity_unit.py  test_connection.py  test_csv_import_unit.py  test_dbapi.py  test_encoding.py  test_examples.py  test_extended_query_benchmark.py  test_external_table.py  test_get_schema_table.py  test_has_rows.py  test_invalid_sql.py  test_load_data_inference.py  test_memory_leak.py  test_metadata_api.py  test_multi_command.py  test_notices.py  test_odbc_comparison.py  test_odbc_comparison_node.py  test_odbc_comparison_smoke.py  test_odbc_parity_extended.py  test_paramstyle.py  test_pool.py  test_pool_unit.py  test_query_consistency.py  test_regressions_unit.py  test_smoke_basic.py  (+4 more)
tests/test_data/: all_floats.csv  booleans.csv  decimals.csv  empty_and_values.csv  mixed_numbers.csv  timestamps.csv  unicode_text.csv
tests/tests/: test_async_ops.py  test_benchmark.py  test_c_python_parity_integration.py  test_connection.py  test_dbapi.py  test_executing_lock.py  test_external_table.py  test_odbc_comparison_node.py  test_paramstyle.py  test_pool.py  test_timeout_async.py  test_transactions.py  test_type_recognition.py  test_types.py
tests/tests/test_data/: all_dates.csv  all_ints.csv  all_varchar.csv  big_ints.csv  booleans_all_numeric.csv  mostly_dates.csv  times.csv
tools/: verify_c_python_parity.py
tools/examples/: compare_results.py  experiments.py  performance_test.py  test_protocol.py
tools/tools/examples/: live_notices.py  performance_test.py  read_table.py  run_benchmark.bat  run_benchmark.sh
